// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Toolbar component snaps should render Toolbar with every widgets 1`] = `
<div
  className="tc-resource-list-toolbar theme-tc-resource-list-toolbar"
>
  <FilterBar
    autoFocus={true}
    className="tc-resource-list-toolbar-filter theme-tc-resource-list-toolbar-filter"
    disabled={false}
    dockable={false}
    docked={true}
    navbar={true}
  />
  <withI18nextTranslation(SortOptions)
    orders={
      {
        "date": "desc",
        "name": "desc",
      }
    }
    t={[Function]}
    types={
      [
        "name",
        "date",
      ]
    }
  />
  <withI18nextTranslation(StateFilter)
    t={[Function]}
    types={
      [
        "selection",
        "favorites",
        "certified",
      ]
    }
  />
</div>
`;

exports[`Toolbar component snaps should render Toolbar without name widget 1`] = `
<div
  className="tc-resource-list-toolbar theme-tc-resource-list-toolbar"
>
  <withI18nextTranslation(SortOptions)
    orders={
      {
        "date": "desc",
        "name": "desc",
      }
    }
    t={[Function]}
    types={
      [
        "name",
        "date",
      ]
    }
  />
  <withI18nextTranslation(StateFilter)
    t={[Function]}
    types={
      [
        "selection",
        "favorites",
        "certified",
      ]
    }
  />
</div>
`;

exports[`Toolbar component snaps should render Toolbar without sort widgets 1`] = `
<div
  className="tc-resource-list-toolbar theme-tc-resource-list-toolbar"
>
  <FilterBar
    autoFocus={true}
    className="tc-resource-list-toolbar-filter theme-tc-resource-list-toolbar-filter"
    disabled={false}
    dockable={false}
    docked={true}
    navbar={true}
  />
  <withI18nextTranslation(StateFilter)
    t={[Function]}
    types={
      [
        "selection",
        "favorites",
        "certified",
      ]
    }
  />
</div>
`;

exports[`Toolbar component snaps should render Toolbar without state widgets 1`] = `
<div
  className="tc-resource-list-toolbar theme-tc-resource-list-toolbar"
>
  <FilterBar
    autoFocus={true}
    className="tc-resource-list-toolbar-filter theme-tc-resource-list-toolbar-filter"
    disabled={false}
    dockable={false}
    docked={true}
    navbar={true}
  />
  <withI18nextTranslation(SortOptions)
    orders={
      {
        "date": "desc",
        "name": "desc",
      }
    }
    t={[Function]}
    types={
      [
        "name",
        "date",
      ]
    }
  />
</div>
`;
